[workspace]
members = [
    # "contracts/hub",
    "contracts/token",
    # "contracts/amp-governance/*",
    "contracts/amp-compounder/*",
    "packages/*",
    # "contracts/arb-vault",
]


[profile.release.package.eris]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true

# [profile.release]
# opt-level = 3
# debug = false
# rpath = false
# lto = true
# debug-assertions = false
# codegen-units = 1
# panic = 'abort'
# incremental = false
