[package]
name = "eris-arb-vault-terra"
version = "1.0.2"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-terra"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw2 = "0.13.2"
cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
cosmwasm-schema = "1.0.0"
cw-storage-plus = "0.15.1"
eris = { path = "../../packages/eris" }
itertools = "0.10"
thiserror = { version = "1.0" }
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", default-features = false, rev = "3b44a4044b823a145730f66ffaf7ae4205b2cd35" }
steak = { git = "https://github.com/PFC-developer/steak-contracts.git", package = "pfc-steak", default-features = false, rev = "425818764da1c6b87080b99f47ecebcccbc99dd8" }

eris-chain-adapter = { path = "../../packages/eris-chain-adapter" }
eris-chain-shared = { path = "../../packages/eris-chain-shared" }

[dev-dependencies]
# cw-multi-test = "0.16"
# cw-multi-test = { git = "https://github.com/CosmWasm/cw-multi-test.git",  default-features = false, features = ["iterator"], rev = "9af32fd42efcf28e9a79987f2c2036f879cd5331"}
cw-multi-test = { git = "https://github.com/erisprotocol/cw-multi-test.git", default-features = false, features = [
    "iterator",
], rev = "5f2f7062187d762b71fd22b91157c4e88de87a64" }
anyhow = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
