[package]
name = "eris-staking-hub-tokenfactory-kujira"
version = "1.7.0"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-kujira"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1.3", features = ["staking"] }
cosmwasm-schema = "1.1.3"
cw2 = "0.13.2"
cw-storage-plus = "0.13.2"
eris = { path = "../../packages/eris" }
eris-chain-adapter = { path = "../../packages/eris-chain-adapter" }
eris-chain-shared = { path = "../../packages/eris-chain-shared" }
itertools = "0.10"
thiserror = { version = "1.0" }
protobuf = "3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
