[package]
name = "eris-staking-token"
version = "1.0.1"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-terra"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
