[package]
name = "eris-restake-gauges"
version = "1.0.0"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2021"
repository = "https://github.com/erisprotocol/contracts-terra"
homepage = "https://erisprotocol.com"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-asset = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
eris = { workspace = true }
cosmwasm-schema = { workspace = true }
astroport = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw20 = { workspace = true }
proptest = { workspace = true }
